--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "lib": [
       "es2016",
       "dom"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   }
 }
